[project]
name = "cc-replay"
version = "0.1.0"
description = "View, replay, and fork Claude Code transcripts in the browser"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
cc-replay = "cc_replay.server:main"
